[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qb-cli"
version = "0.1.0"
description = "QuickBooks Online CLI — manage your books from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Paul P. Budveit" },
]
keywords = ["quickbooks", "cli", "accounting", "api", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "ofxparse>=0.21",
]

[project.scripts]
qb = "qb.cli:main_entrypoint"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qb"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "sandbox: marks tests that require live sandbox credentials",
]
